--- a/templates/base.html
+++ b/templates/base.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-        crossorigin="anonymous" />
+        crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
-    <link rel="manifest" href="{{ url_for('static', filename='favicon/site.webmanifest') }}" crossorigin="use-credentials">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@900&family=Bodoni+Moda:wght@500&family=Commissioner:wght@200&family=Yusei+Magic&display=swap"
+        rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='favicon/site.webmanifest') }}"
+        crossorigin="use-credentials">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    
-    
+
+
     {% block styles %}
     {% endblock %}
     <title>Fitipedia&#8211;the free online fitness dictionary</title>
@@ -30,62 +32,65 @@
 <body>
     <header>
         <!-- top navbar -->
-        <nav class="blue-grey darken-3">
-            <div class="nav-wrapper">
-                <a href="{{ url_for('home_page') }}" class="brand-logo">Fitipedia</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a class="nav-link" href="{{ url_for('home_page') }}">Home</a></li>
-                    <li><a class="nav-link" href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
-                    {% if session.user %}
-                        <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a></li>
+        <div class="navbar-fixed">
+            <nav class="blue-grey darken-3">
+                <div class="nav-wrapper">
+                    <a href="{{ url_for('home_page') }}" class="brand-logo">Fitipedia</a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a class="nav-link" href="{{ url_for('home_page') }}">Home</a></li>
+                        <li><a class="nav-link" href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
+                        {% if session.user %}
+                        <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a>
+                        </li>
                         <li><a class="nav-link" href="{{ url_for('add_definition') }}">Add Definition</a></li>
                         {% if session.user|lower == "admin" %}
-                            <li><a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a></li>
+                        <li><a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a></li>
                         {% endif %}
                         <li><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
-                    {% else %}
+                        {% else %}
                         <li><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
                         <li><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
+        </div>
 
         <!-- mobile side navbar -->
         <ul class="sidenav" id="mobile-demo">
             <li><a class="nav-link" href="{{ url_for('home_page') }}">Home</a></li>
             <li><a class="nav-link" href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
             {% if session.user %}
-                <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a></li>
-                <li><a class="nav-link" href="{{ url_for('add_definition') }}">Add Definition</a></li>
-                {% if session.user|lower == "admin" %}
-                    <li><a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a></li>
-                {% endif %}
-                <li><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
-            {% else %}
-                <li><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
-                <li><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
+            <li><a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">My Profile</a></li>
+            <li><a class="nav-link" href="{{ url_for('add_definition') }}">Add Definition</a></li>
+            {% if session.user|lower == "admin" %}
+            <li><a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a></li>
             {% endif %}
-            </ul>
+            <li><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+            {% else %}
+            <li><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+            <li><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+        </ul>
         </ul>
     </header>
 
     <!-- display flash messages -->
     <section id="flashed_messages" class="center-align">
         {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <h5 class="flash-message center-align">{{ message }}</h5>
-                {% endfor %}
-            {% endif %}
+        {% if messages %}
+        {% for message in messages %}
+        <h5 class="flash-message center-align">{{ message }}</h5>
+        {% endfor %}
+        {% endif %}
         {% endwith %}
     </section>
 
     <!-- main content area -->
     <main>
         {% block content %}
-    
+
         {% endblock %}
     </main>
 
@@ -94,7 +99,7 @@
         <a href="#">
             <i class="fas fa-hand-point-up tooltipped" data-tooltip="BACK TO TOP"></i>
         </a>
-	</div>
+    </div>
 
     <!-- footer -->
     <footer class="page-footer">
@@ -146,18 +151,22 @@
         </div>
         <div class="copyright-info center-align">
             <div class="container">
-                <span class="copyright">&#169; Budget Helper <span id="copyrightYear"></span> &#124; <a href="{{ url_for('contact') }}">Contact Us</a></span>
+                <span class="copyright">&#169; Budget Helper <span id="copyrightYear"></span> &#124; <a
+                        href="{{ url_for('contact') }}">Contact Us</a></span>
             </div>
         </div>
     </footer>
 
     <!-- PAGE SCRIPTS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8VzEKhjUKQg82qb1z23PFuDo8RYWmgyQ&callback=initMap" type="text/javascript" async defer></script>
+    <script
+        src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8VzEKhjUKQg82qb1z23PFuDo8RYWmgyQ&callback=initMap"
+        type="text/javascript" async defer></script>
     <script>
-            $("#copyrightYear").text(new Date().getFullYear());
+        $("#copyrightYear").text(new Date().getFullYear());
     </script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/maps.js') }}"></script>
