--- a/templates/edit_term.html
+++ b/templates/edit_term.html
@@ -29,7 +29,7 @@
                     <!-- submit button -->
                     <div class="row center-align">
                         <div class="col s12">
-                            <button type="submit" class="btn-large edit green darken-2">
+                            <button type="submit" class="btn-large edit blue">
                                 Update term information
                             </button>
                         </div>
