--- a/templates/index.html
+++ b/templates/index.html
@@ -34,13 +34,13 @@
             </div>
         </section>
     </div>
-    {% if session.user %}
-        <h1 class="center-align welcome-heading">Welcome, {{ session.user }}</h1>
-    {% endif %}
-    <div class="container search-container center-align">
+    <div id="search_bar" class="container search-container center-align">
+        {% if session.user %}
+            <h1 class="center-align welcome-heading">Welcome, {{ session.user }}</h1>
+        {% endif %}
         <div class="row">
             <div class="col s12">
-                <form id="search_bar" method="POST" action="{{ url_for('search') }}">
+                <form method="POST" action="{{ url_for('search') }}">
                     <div class="row">
                         <div class="input-field col s12 m7 l8">
                             <i class="fas fa-search prefix"></i>
