--- a/templates/index.html
+++ b/templates/index.html
@@ -29,18 +29,18 @@
             </div>
             <div class="row btn-wrapper">
                 <div class="col s12">
-                    <a href="#search_bar" class="btn-large search-btn">Search dictionary</a>
+                    <a href="#search" class="btn-large search-btn">Search dictionary</a>
                 </div>
             </div>
         </section>
     </div>
-    <div id="search_bar" class="container search-container center-align">
+    <div id="search" class="container search-container center-align">
         {% if session.user %}
             <h1 class="center-align welcome-heading">Welcome, {{ session.user }}</h1>
         {% endif %}
         <div class="row">
             <div class="col s12">
-                <form method="POST" action="{{ url_for('search') }}">
+                <form id="search_bar" method="POST" action="{{ url_for('search') }}">
                     <div class="row">
                         <div class="input-field col s12 m7 l8">
                             <i class="fas fa-search prefix"></i>
