--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="col s12">
                     <p>
-                        An admin may add a user to the database in exceptional circumstances if the user is having issues signing up that are unable to be resolved and the user&#8217;s desired username and e-mail address are not already in use. In such circumstances, the admin will generate a random password for the user which the user must change immediately after logging in for the first time.
+                        An admin may add a user to the database in exceptional circumstances if the user is having issues signing up that are unable to be resolved and the user&#8217;s desired username and e-mail address are not already in use. In such circumstances, the admin will generate a random password for the user. It is recommended that the user changes this password immediately after logging in for the first time.
                     </p>
                 </div>
             </div>
